clean up directory structure

--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "build-html-min": "for f in *.html; do htmlclean $f -o dist/$f; done",
     "build-css": "index.css > dist/index.css",
     "build-css-min": "cat index.css | csso > dist/index.css",
-    "build-js": "browserify index.js > dist/index.js",
-    "build-js-min": "browserify -p [ tinyify --no-flat ] index.js -t [ babelify --presets [ env ] ] > dist/index.js",
+    "build-js": "browserify scripts/index.js > dist/index.js",
+    "build-js-min": "browserify -p [ tinyify --no-flat ] scripts/index.js -t [ babelify --presets [ env ] ] > dist/index.js",
     "build-images": "cp -r images dist",
-    "build-root": "cp robots.txt favicon.png dist",
+    "build-root": "cp robots.txt dist",
     "build-min": "npm run build-html-min && npm run build-css-min && npm run build-js-min && npm run build-root",
     "watch-html": "catw index.html -o dist/index.html -v",
     "watch-css": "catw *.css -o dist/index.css -v",
-    "watch-js": "watchify index.js -t [ babelify --presets [ env ] ] -o dist/index.js -dv",
+    "watch-js": "watchify scripts/index.js -t [ babelify --presets [ env ] ] -o dist/index.js -dv",
     "watch": "npm run watch-html & npm run watch-css & npm run watch-js",
     "start": "set -m; http-server dist -so & npm run watch; fg",
     "test": "tap test/*.js"
