--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visualizer",
-  "version": "0.4.0",
+  "version": "0.5.0-alpha",
   "description": "",
   "private": true,
   "main": "index.html",
